[gd_scene load_steps=7 format=3 uid="uid://c6vjbb3oft8q1"]

[ext_resource type="Script" uid="uid://dtptx4s5kluco" path="res://scenes/GUI/bingo_main/character_boxes/enemy/gui_enemy_box.gd" id="1_bi6yr"]
[ext_resource type="Script" uid="uid://cm3abed122s44" path="res://scenes/utils/shake.gd" id="4_uc2ts"]
[ext_resource type="AudioStream" uid="uid://b1lihqakd4i3p" path="res://resources/sounds/SFX/bingo/enemy_death.wav" id="5_qmoyo"]
[ext_resource type="AudioStream" uid="uid://bgoukjvtbmrbu" path="res://resources/sounds/SFX/bingo/enemy_appear.wav" id="6_ltdqq"]
[ext_resource type="PackedScene" uid="uid://c1l6h1c5hcuee" path="res://scenes/GUI/bingo_main/character_boxes/enemy/gui_enemy_box_detail_long.tscn" id="6_xsiuf"]
[ext_resource type="AudioStream" uid="uid://btaikd755ehjw" path="res://resources/sounds/SFX/bingo/bingo_attack.wav" id="7_o7it5"]

[node name="GUIEnemyBox" type="PanelContainer"]
offset_right = 56.0
offset_bottom = 27.0
script = ExtResource("1_bi6yr")

[node name="GUICharacterBoxDetail" parent="." instance=ExtResource("6_xsiuf")]
unique_name_in_owner = true
layout_mode = 2

[node name="Shake" type="Node" parent="."]
script = ExtResource("4_uc2ts")

[node name="DeathAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_qmoyo")
volume_db = 5.0
bus = &"SFX"

[node name="AppearAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_ltdqq")
volume_db = 5.0
bus = &"SFX"

[node name="AttackedAudioPlayer" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_o7it5")
bus = &"SFX"

[node name="AnimationContainer" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="GUIEnemyDetailAnimator" parent="AnimationContainer" instance=ExtResource("6_xsiuf")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_right = 0.0
offset_left = 0.0
offset_right = 57.0
grow_horizontal = 1
